# bnbpy

./: .clang-format  .coveragerc  .gitignore  .readthedocs.yaml  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  README.md  clean.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.py
.github/workflows/: build.yml  mypy.yml  ruff.yml  test.yml
data/: lot_size.csv  requirements-dev.txt  requirements.txt
data/flow-shop/: car1.json  car2.json  car3.json  car4.json  car5.json  car6.json  car7.json  car8.json  flow-shop-bench.ipynb  hel1.json  hel2.json  reC01.json  reC03.json  reC05.json  reC07.json  reC09.json  reC11.json  reC13.json  reC15.json  reC17.json  reC19.json  reC21.json  reC23.json  reC25.json  reC27.json  reC29.json  reC31.json  reC33.json  reC35.json  reC37.json  reC39.json  reC41.json  ta001.json  ta002.json  ta003.json  ta004.json  ta005.json  ta006.json  ta007.json  ta008.json  (+112 more)
data/gcol/: gcol100.txt  gcol32.txt  gcol_1000_5.txt  gcol_50_7.txt  gcol_70_7.txt
data/machdeadline/: generator.py  generator_small.py  n20_001.json  n20_002.json  n20_003.json  n20_004.json  n20_005.json  n20_006.json  n20_007.json  n20_008.json  n20_009.json  n20_010.json  n20_011.json  n20_012.json  n20_013.json  n20_014.json  n20_015.json  n20_016.json  n20_017.json  n20_018.json  n20_019.json  n20_020.json  n20_021.json  n20_022.json  n20_023.json  n20_024.json  n20_025.json  n20_026.json  n20_027.json  n20_028.json  n20_029.json  n20_030.json  n40_031.json  n40_032.json  n40_033.json  n40_034.json  n40_035.json  n40_036.json  n40_037.json  n40_038.json  (+141 more)
data/maxclique/: generator.py  graph_n100_041.json  graph_n100_042.json  graph_n100_043.json  graph_n100_044.json  graph_n100_045.json  graph_n100_046.json  graph_n100_047.json  graph_n100_048.json  graph_n100_049.json  graph_n100_050.json  graph_n100_051.json  graph_n100_052.json  graph_n100_053.json  graph_n100_054.json  graph_n100_055.json  graph_n100_056.json  graph_n100_057.json  graph_n100_058.json  graph_n100_059.json  graph_n100_060.json  graph_n100_061.json  graph_n100_062.json  graph_n100_063.json  graph_n100_064.json  graph_n100_065.json  graph_n100_066.json  graph_n100_067.json  graph_n100_068.json  graph_n100_069.json  graph_n100_070.json  graph_n100_071.json  graph_n100_072.json  graph_n100_073.json  graph_n100_074.json  graph_n100_075.json  graph_n100_076.json  graph_n100_077.json  graph_n100_078.json  graph_n100_079.json  (+121 more)
data/pafssp/: README.md  custom.py  generator.py  instances-2f.json  instances-custom-chain.json  instances-d2f.json  instances-dfm.json  instances-dpm.json
data/pafssp/custom-chain/: custom-001-20-chain7.json  custom-002-20-chain7.json  custom-003-20-chain7.json  custom-004-20-chain7.json  custom-005-20-chain7.json  custom-006-20-chain7.json  custom-007-20-chain7.json  (+33 more)
data/sl-flow-shop/: read-me.txt
docs/: requirements.txt
docs/source/: bnbpy.colgen.rst  bnbpy.cython.levelqueue.rst  bnbpy.cython.manager.rst  bnbpy.cython.node.rst  bnbpy.cython.nodequeue.rst  bnbpy.cython.primanager.rst  bnbpy.cython.priqueue.rst  bnbpy.cython.problem.rst  bnbpy.cython.search.rst  bnbpy.cython.solution.rst  bnbpy.cython.status.rst  bnbpy.rst  class_diagram.md  conf.py  examples.rst  index.rst
experiments/: assembly-experiments.ipynb  complex-layouts.ipynb  custom-arpd-summary.csv  custom-experiments-heur.csv  custom-opt-experiments.csv  custom-opt-summary.csv  custom_experiments_heur.py  custom_opt_experiments.py  delayed-bound-experiments-bench.csv  delayed-bound-experiments-new.csv  delayed-excel.ipynb  delayed_bounds.py  dfm-arpd-summary.csv  dfm-experiments-heur.csv  dfm-experiments-ref.csv  dfm-experiments-split-1.csv  dfm-experiments-split-2.csv  dfm-experiments.csv  dfm-opt-experiments.csv  dfm-opt-summary.csv  dfm_experiments_heur.py  dfm_opt_experiments.py  dfm_opt_experiments_bak.py  dfm_opt_experiments_ref.py  dfm_opt_experiments_split.py  dpm-arpd-summary.csv  dpm-experiments-10-16.csv  dpm-experiments-heur.csv  dpm-experiments-p2.csv  dpm-experiments.ipynb  dpm-opt-experiments.csv  dpm-opt-summary copy.csv  dpm-opt-summary.csv  dpm_experiments_heur.py  dpm_opt_experiments.py  dpm_opt_experiments_bak.py  dpm_opt_experiments_p2.py  early-pruning-comparison-groups.csv  early-pruning-comparison.csv  heur-experiments.csv  (+6 more)
notebooks/: bak_tree_animation.py  bench-pfssp-20m.xlsx  bench-pfssp-2mhalf-dfs.xlsx  bench-pfssp-large.xlsx  bench-pfssp-quit-dfs.xlsx  bench-pfssp.xlsx  create-slpfssp.ipynb  cutting-stock.ipynb  delayed-bound-experiments-new.csv  delayed-bound-experiments.ipynb  draft-bnb.ipynb  earl-tard.ipynb  graph-coloring.ipynb  lot-size.ipynb  lower-pfssp-1m-dfs.xlsx  lower-pfssp-2m-dfs.xlsx  lower-pfssp-2mhalf-dfs-dyn-idle.xlsx  lower-pfssp-2mhalf-dfs-dyn-sum.xlsx  lower-pfssp-2mhalf-dfs-dyn.xlsx  lower-pfssp-2mhalf-dfs.xlsx  lower-pfssp-quit-dfs.xlsx  mach_deadline_hard.json  max-windep-set.ipynb  maxclique.ipynb  milp.ipynb  obj-counter.ipynb  pafssp-bench.ipynb  pafssp-experiments-d2f-neh.csv  pafssp-experiments-d2m-neh.csv  pafssp-experiments.ipynb  pafssp.ipynb  pafssp_draft.py  pfsp-experiments-tai.csv  pfssp-bench copy.ipynb  pfssp-bench-2.ipynb  pfssp-bench.ipynb  pfssp-experiments-bounds.ipynb  pfssp-experiments-simple.ipynb  pfssp-experiments.ipynb  pfssp-neh.ipynb  (+4 more)
src/bnbpy/: __init__.py  colgen.py  foo.py  logger.py  node.py  parallel.py  plot.py  problem.py  search.py  solution.py  status.py
tests/: conftest.py  test_gcol.py  test_machpy.py  test_milpy.py  test_pfssp.py
tests/cpp/: README.md  test_job.cpp  test_job_times.cpp  test_permutation.cpp  test_sigma.cpp  test_single_mach.cpp  test_two_mach.cpp  test_utils.cpp
tests/fixtures/: myproblem.py  pyproblem.py
tests/myfixtures/: myproblem.py
tests/test_bnbprob/: test_gcol.py  test_machinegraph.py  test_machpy.py  test_milpy.py  test_pfssp.py
tests/test_bnbpy/: myproblem.py  test_cbfs.py  test_colgen.py  test_compilation.py  test_levelqueue.py  test_logger.py  test_manager.py  test_node.py  test_priqueue.py  test_problem.py  test_search.py  test_solution.py
(+680 files in other folders)
