[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "Cython>=3.0",
    "numpy>=1.19.0"
]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = [
  "E",   # pycodestyle - code style errors
  "F",   # pyflakes - code quality
  "I",   # isort - import order
  "W",   # pycodestyle - code style warnings
  "PL",  # pylint - code quality
  "PT",  # flake8-pytest-style - code style for pytest
  "C",   # Verifica a complexidade de código (inclui C901)
  "B",   # flake8-bugbear - verifica code smells
]

[tool.ruff.format]
preview = true
quote-style = "single"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = true
disable_error_code = ["unused-ignore"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "machdeadline: Mark test related to machine deadline scenarios",
    "pfssp: Mark test related to PFSSP scenarios",
    "milp: Mark test related to MILP problems",
    "milpnaive: Mark test related to naive MILP implementations",
    "knapsack: Mark test related to knapsack problem implementations",
    "solution: Mark test related to Solution class",
    "problem: Mark test related to Problem class",
    "node: Mark test related to Node class",
    "search: Mark test related to B&B search module",
    "colgen: Mark test related to Column Generation",
    "gcol: Mark test related to the Graph Coloring module",
    "searchlogger: Mark test related to the SearchLogger class",
    "core: Mark test for core functionality (solution, problem, node, search)",
    "integration: Mark for integration tests (machdeadline, pfssp, milp, milpnaive, knapsack, gcol)"
]
