[metadata]
name = bnbpy
version = 0.1.0
description = A Python general Branch & Bound framework.
long_description = file: README.md
long_description_content_type = text/markdown
author = Bruno Scalia C. F. Leite
author_email = bruscalia12@gmail.com
license = MIT
url = https://github.com/bruscalia/bnbpy

[options]
packages = find:
package_dir =
    =src
install_requires =
    numpy>=1.21
    scipy>=1.9
    Cython==3.*

[options.package_data]
bnbpy = cython/*.pyx, cython/*.pxd, cython/*.c, cython/*.cpp

[options.extras_require]
lint =
    pytest==7.*
    pytest-mock==3.14.*
    pytest-cov==6.2.*
    ruff==0.7.*
    mypy==1.*
    pydantic==2.*
    networkx==3.*
    pandas==2.*
tests =
    %(lint)s
    matplotlib==3.*
    pyomo==6.*
    gif==23.*
    pandas[excel]==2.*
    ortools==9.11.*
dev =
    %(tests)s
    ipykernel
